Added my plans to READ.md, Fixed my file structure and finished up my Lasagna page.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <ul>
-            <li>Lasagna</li>
+           <li><a href="./recipes/lasagna.html">Lasagna</a></li>
 
 
         </ul>
