--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     </head>
 
     <body>
+        <h1>Recipes</h1>
+        There are <strong>Three</strong> lovely Recipes below that you can make at the comfort of your Home, chooose one, or why not ALL!
         <ul>
            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+           <li><a href="./recipes/ramen.html">Ramen</a></li>
+           <li><a href="./recipes/spicebag.html">Spice Bag</a></li>
+           
 
 
         </ul>
